Update KhaltiController URLs and remove excessive comments
- Changed `returnUrl` values to use `http://localhost:3000` instead of `http://localhost:5173`.
- Removed redundant comments to improve code readability in Khalti payment verification logic.